--- a/app/assets/stylesheets/users/home.scss
+++ b/app/assets/stylesheets/users/home.scss
@@ -2,15 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// body {
-//   margin: 0;
-//   font-family: "Hiragino Kaku Gothic ProN";
-// }
-
-// a {
-//   text-decoration: none;
-// }
-
 .container{
   width:1170px;
   // padding:15px;
@@ -30,6 +21,7 @@
 .top-wrapper h1{
 	opacity:0.7;
 	letter-spacing: 3px;
+  margin-left: 10px;
 }
 
 .top-wrapper p{
@@ -52,22 +44,10 @@
   background-color: #239b76;
 }
 
-.google{
-  background-color: #239b76;
-  margin-right: 10px;
-}
-
 .btn-wrapper{
   margin: 20px 0;
 }
 
-.btn-wrapper p{
-  margin: 10px 0;
-}
-
-.fab {
-	margin-right: 5px;
-}
 
 .lesson-wrapper{
   height: 500px;
@@ -76,7 +56,7 @@
 }
 
 
-/* headingクラスのCSSを指定してください */
+
 .heading{
   padding: 60px 0 30px 0;
   color :#5f5d60;
@@ -87,7 +67,7 @@
   font-weight: normal;
 }
 
-.lesson{
+.lessons{
   float: left;
   width: 25%;
 }
@@ -101,10 +81,6 @@
   color: #b3aeb5;
 }
 
-.message {
-  background-color: #5dca88;
-  padding: 15px 40px;
-}
 
 .heading h3{
   font-weight: normal;
