--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -6,13 +6,13 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/images/hirakata.jpg" alt="First slide">
+            <div class="d-block w-100"><%= image_tag "hirakata.jpg" %></div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/images/kasen.jpg" alt="Second slide">
+            <div class="d-block w-100"><%= image_tag "kasen.jpg" %></div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/images/hirapa.jpg" alt="Third slide">
+            <div class="d-block w-100"><%= image_tag "hirapa.jpg" %></div>
           </div>
         </div>
       <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
