--- a/app/assets/stylesheets/users/post.scss
+++ b/app/assets/stylesheets/users/post.scss
@@ -6,9 +6,9 @@
 	padding: 10px;
 }
 
-.line_wrap {
-    overflow: hidden;
-  height: 3.6em /* 2em（行）x line-heightの1.8 */
-  font-size: 16px;
-  line-height: 1.8;
-}
+// .line_wrap {
+//     overflow: hidden;
+//   height: 3.6em /* 2em（行）x line-heightの1.8 */
+//   font-size: 16px;
+//   line-height: 1.8;
+// }
