--- a/app/views/users/inquiry/confirm.html.erb
+++ b/app/views/users/inquiry/confirm.html.erb
@@ -1,4 +1,7 @@
-<div class="page-header">
+<div class="card mx-auto mt-5" style="width: 50%;">
+  <div class="card-body mx-auto">
+
+<div class="page-header mt-5 ml-4 mb-5 badge badge-light">
   <h1>お問い合わせ</h1>
 </div>
 
@@ -26,5 +29,8 @@
       </td>
     </tr>
   </table>
-  <%= f.submit '送信', :class => 'btn btn-primary' %>
+  <%= f.submit '送信', :class => 'btn btn-primary btn-raised' %>
 <% end %>
+
+</div>
+</div>
