--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-md-4 col-sm-12">
     <div class="ml-5 mt-5">
-      <div class="card">
+      <div class="card mb-5">
       <span class="badge badge-primary">プロフィール</span>
       <div class="card-body">
         <div id="follow_count_<%= @user.id %>">
