--- a/app/views/users/post/new.html.erb
+++ b/app/views/users/post/new.html.erb
@@ -17,7 +17,7 @@
   	  	  	    <%= f.attachment_field :image, id: "image-form" %>
                 <p class="image-text">クリックしてファイルを選択してください</p>
                 <div id="image-preview">
-                  <img src="/assets/no_image-72379a4da21cb04a58337cf92d85bc39f8d534cbc78254c2085acaca82236bfa.jpg" >
+                  <%= image_tag "no_image.jpg" %>
                 </div>
               </label>
   	  	  	</div>
