--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -2,7 +2,7 @@
 <div class="a card mt-5">
 <h3 class="mt-5 ml-5">
   <span class="badge badge-pill badge-primary">ユーザー詳細</span>
-  <span class="menu badge badge-pill badge-primary ml-5">投稿一覧</span>
+  <span class="menu badge badge-pill badge-primary ml-5 mt-1">投稿一覧</span>
 </h3>
 
 
