--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,13 +1,13 @@
 <%= render partial: 'layouts/flash' %>
 <div class="a card mt-5">
 <h3 class="mt-5 ml-5">
-  <span class="badge badge-pill badge-primary">ユーザー詳細</span>
+  <span class="badge badge-primary">ユーザー詳細</span>
   <span class="menu badge badge-pill badge-primary ml-5 mt-1">投稿一覧</span>
 </h3>
 
 
 <div class="row">
-  <div class="col-md-4 col-sm-12">
+  <div class="col-md-3 col-sm-12">
     <div class="ml-5 mt-5">
       <div class="card mb-5">
       <span class="badge badge-primary">プロフィール</span>
@@ -47,10 +47,10 @@
     </div>
   </div>
 
-  <div class="row col-md-8 col-sm-12">
+  <div class="row col-md-9 col-sm-12">
     <% @posts.each do |post| %>
     <div class="col-12 col-md-4">
-      <div class="card mt-5 ml-2 mr-5" style="width: 90%;">
+      <div class="card mt-5" style="width: 100%;">
         <%= link_to users_post_path(post) do %>
           <%= attachment_image_tag post, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
         <% end %>
@@ -78,7 +78,7 @@
   <div class="row col-md-12 col-sm-12">
     <% @favorite_posts.each do |favorite| %>
     <div class="col-12 col-md-3 mx-auto">
-      <div class="card mx-auto" style="width: 90%;">
+      <div class="card mx-auto" style="width: 100%;">
         <%= link_to users_post_path(favorite) do %>
           <%= attachment_image_tag favorite, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
         <% end %>
@@ -109,7 +109,7 @@
 }
 .menu {
   position: absolute;
-  right: 600px;
+  right: 720px;
 }
 
 </style>
