--- a/app/views/users/users/_profile.html.erb
+++ b/app/views/users/users/_profile.html.erb
@@ -12,7 +12,7 @@
       <div class="card-body">
     	  <span>
           <%= link_to follows_users_user_path(id: @user.id) do %>
-    	  	  <strong><%= @user.followings.count %></strong> フォロー中
+    	  	  <strong><%= @user.followings.count %></strong> フォロー
           <% end %>
     	  </span></br>
     	  <span>
