--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="card mx-auto mt-5" style="width: 50%;">
+  <div class="card-body mx-auto">
+
 <%= form_with model:@user, url: users_user_path, local:true do |f| %>
 <%= render 'layouts/error_messages', model: f.object %>
   <div class="row">
@@ -10,7 +13,7 @@
   	  	  </th>
   	  	  <th>
   	  	  	<div>
-  	  	  	  <%= f.attachment_field :image %>
+  	  	  	  <%= f.attachment_field :image, class: "form-control" %>
   	  	  	</div>
   	  	  </th>
   	  	</tr>
@@ -21,7 +24,7 @@
   	      <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating"></label>
-  	      	   <%= f.text_field :name, placeholder: "名前" %>
+  	      	   <%= f.text_field :name, placeholder: "名前", class: "form-control" %>
             </div>
   	      </th>
   	  	</tr>
@@ -32,7 +35,7 @@
   	  	  <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating"></label>
-  	  	  	    <%= f.text_area :introduction, placeholder: "自己紹介" %>
+  	  	  	    <%= f.text_area :introduction, placeholder: "自己紹介", class: "form-control" %>
             </div>
   	  	  </th>
   	  	</tr>
@@ -46,3 +49,6 @@
   	</div>
   </div>
 <% end %>
+
+</div>
+</div>
