--- a/app/views/users/inquiry/index.html.erb
+++ b/app/views/users/inquiry/index.html.erb
@@ -23,15 +23,15 @@
   <table class="table">
     <tr>
       <th>名前<span class="badge badge-danger">必須</span></th>
-      <td><%= f.text_field :name %></td>
+      <td><%= f.text_field :name, class: "form-control" %></td>
     </tr>
     <tr>
       <th>メールアドレス<span class="badge badge-danger">必須</span></th>
-      <td><%= f.text_field :email %></td>
+      <td><%= f.text_field :email, class: "form-control" %></td>
     </tr>
     <tr>
       <th>お問い合わせ内容</th>
-      <td><%= f.text_area :message %></td>
+      <td><%= f.text_area :message, class: "form-control" %></td>
     </tr>
   </table>
   <%= f.submit '確認', class: 'btn btn-primary btn-raised' %>
