--- a/app/views/users/post/index.html.erb
+++ b/app/views/users/post/index.html.erb
@@ -16,7 +16,7 @@
         <div class="card-body">
           <h5 class="card-title"><%= p.title %></h5>
           <p class="card-text line_wrap"><%= p.body %></p>
-          <%= link_to "詳細",users_post_path(p), class: "btn btn-primary" %>
+          <%= link_to "詳細",users_post_path(p), class: "btn btn-outline-primary" %>
         </div>
       </div>
     </div>
