--- a/app/views/users/users/followers.html.erb
+++ b/app/views/users/users/followers.html.erb
@@ -1,11 +1,8 @@
+<div class="card mx-auto mt-5" style="width: 80%;">
+  <div class="card-body mx-auto">
+
 <table class="table table-striped">
-  <tr>
-  	<th>ユーザー画像</th>
-  	<th></th>
-  	<th></th>
-    <th></th>
-    <th></th>
-  </tr>
+
   <% @users.each do |user| %>
   <tr>
   	<td>
@@ -31,3 +28,6 @@
     </tr>
 	<% end %>
 </table>
+
+</div>
+</div>
