--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -57,7 +57,7 @@
         <div class="card-body">
           <h5 class="card-title"><%= post.title %></h5>
           <p class="card-text line_wrap"><%= post.body %></p>
-          <%= link_to "詳細",users_post_path(post), class: "btn btn-primary" %>
+          <%= link_to "詳細",users_post_path(post), class: "btn btn-outline-primary" %>
           <% if @user == current_user %>
             <div><%= link_to "編集する",edit_users_post_path(post), class: "btn btn-outline-success" %></div>
           <% end %>
@@ -85,7 +85,7 @@
         <div class="card-body">
           <h5 class="card-title"><%= favorite.title %></h5>
           <p class="card-text line_wrap"><%= favorite.body %></p>
-          <%= link_to "詳細",users_post_path(favorite), class: "btn btn-primary" %>
+          <%= link_to "詳細",users_post_path(favorite), class: "btn btn-outline-primary" %>
         </div>
       </div>
     </div>
