--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -34,6 +34,11 @@
           <div class="btn btn-primary btn-raised ">新規会員登録はこちら</div>
         <% end %>
         </div>
+        <div class="mt-3 ml-4">
+        <%= link_to new_user_session_path do %>
+          <div class="btn btn-primary btn-raised ">ログインする</div>
+        <% end %>
+        </div>
       </div>
   </div>
 </div>
