loginボタン追加

--- a/app/views/users/rooms/show.html.erb
+++ b/app/views/users/rooms/show.html.erb
@@ -32,7 +32,7 @@
   <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70, class: "form-control" %>
   <%= f.hidden_field :room_id, :value => @room.id %>
   <br>
-  <%= f.submit "投稿する", class: "btn btn-outline-success" %>
+  <%= f.submit "送信", class: "btn btn-outline-success" %>
 <% end %>
 </div>
 </div>
