--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -34,10 +34,15 @@
           <div class="btn btn-primary btn-raised ">新規会員登録はこちら</div>
         <% end %>
         </div>
-        <div class="mt-3 ml-4">
+        <div class="mt-3">
         <%= link_to new_user_session_path do %>
           <div class="btn btn-primary btn-raised ">ログインする</div>
         <% end %>
+        </div>
+        <div class="mt-3">
+          <%= link_to users_guest_sign_in_path, method: :post do %>
+            <div class="btn btn-outline-primary">まずはゲストユーザーとしてログインしてみる</div>
+          <% end %>
         </div>
       </div>
   </div>
@@ -61,7 +66,7 @@
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">まずは登録してみよう！</h5>
+    <h5 class="card-title">まずは登録して、投稿を見てみよう！</h5>
     <p class="card-text">会員登録にかかる時間は1分程度です。</p>
     <%= link_to new_user_registration_path do %>
       <div class="btn btn-primary btn-raised">登録ページへ</div>
