--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -1,7 +1,7 @@
 <div class="top-wrapper mt-5">
-	<div class="container">
+
     <div class="row">
-      <div class="row col-md-6 mt-5">
+      <div class="row col-md-6 mt-5 mb-5">
     <div class="top">
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
@@ -31,7 +31,7 @@
         <p>HiraPediaは枚方の好きな場所を投稿できるサイトです</p>
         <div class="btn-wrapper">
         <%= link_to new_user_registration_path do %>
-          <div class="btn btn-primary btn-raised ">新規会員登録はこちら</div>
+          <div class="btn btn-primary btn-raised ">新規ユーザー登録はこちら</div>
         <% end %>
         </div>
         <div class="mt-3">
@@ -47,33 +47,40 @@
       </div>
   </div>
 </div>
-</div>
-<div class="lesson-wrapper">
-	<div class="container">
+<div class="card text-center" >
     <div class="row">
       <div class="col-mx-6 mx-auto">
-        <div class="heading">
+        <div class="card-header">
+        </div>
+        <div class="card-header mb-3">
           <h2>Hirapediaとは？</h2>
         </div>
-        <div class="lessons"></div>
-            <p class="txt-contents"></p>
+          <div class="card-body mx-auto mt-3 mb-3">
+            <h5>
+              枚方や枚方近郊にあるおすすめスポットを投稿して共有したり、<br>
+              他の人の投稿を見たりして、楽しむことの出来るサイトです。<br>
+              このサイトを通して枚方のことを、より知っていただければと思っております。<br>
+              もっと詳しく知りたい方は
+              <%= link_to users_about_path do %>
+              こちら
+              <% end %>
+              をクリック！
+            </h5>
+          </div>
         </div>
       </div>
-  </div>
-</div>
-<div class="card text-center">
+    </div>
+<div class="card text-center mt-5">
   <div class="card-header">
-    Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">まずは登録して、投稿を見てみよう！</h5>
+    <h5 class="card-title">まずはユーザー登録して、投稿を見てみよう！</h5>
     <p class="card-text">会員登録にかかる時間は1分程度です。</p>
     <%= link_to new_user_registration_path do %>
-      <div class="btn btn-primary btn-raised">登録ページへ</div>
+      <div class="btn btn-primary btn-raised">ユーザー登録ページへ</div>
     <% end %>
   </div>
   <div class="card-footer text-muted">
-    2 days ago
   </div>
 </div>
 
