--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -33,7 +33,7 @@
                 <%= fields_for @entry do |e| %>
                   <%= e.hidden_field :user_id, :value=> @user.id %>
                 <% end %>
-              <%= f.submit "チャットを始める" %>
+              <%= f.submit "チャットを始める",class: "btn btn-raised btn-primary" %>
               <% end %>
             <% end %>
           <% end %>
