--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -55,12 +55,12 @@
         <div class="card-header mb-3">
           <h2>Hirapediaとは？</h2>
         </div>
-          <div class="card-body mx-auto mt-3 mb-3">
+          <div class="card-body mx-auto mt-3 mb-3 text-muted">
             <h5>
-              枚方や枚方近郊にあるおすすめスポットを投稿して共有したり、<br>
-              他の人の投稿を見たりして、楽しむことの出来るサイトです。<br>
-              このサイトを通して枚方のことを、より知っていただければと思っております。<br>
-              もっと詳しく知りたい方は
+              枚方や枚方近郊にあるおすすめスポットを投稿して共有したり<br><br>
+              他の人の投稿を見たりして、楽しむことの出来るサイトです。<br><br>
+              このサイトを通して枚方のことを、より知っていただければと思っております。<br><br>
+              もっとHiraPediaについて詳しく知りたい方は
               <%= link_to users_about_path do %>
               こちら
               <% end %>
