--- a/app/views/users/rooms/show.html.erb
+++ b/app/views/users/rooms/show.html.erb
@@ -2,15 +2,18 @@
   <div class="card-body mx-auto">
 
 
-<h1>DM</h1>
+<div class="m-3 badge badge-pill badge-primary">
+  <h5 class="mt-2">ダイレクトメッセージ</h5>
+</div>
 
-<h4>参加者</h4>
 <% @entries.each do |e| %>
-  <h5><strong>
+  <div class="ml-5">
+    <strong>
     <%= link_to users_user_path(e.user.id) do %>
       <%= e.user.name%>さん
     <% end %>
-  </strong></h5>
+  </strong>
+</div>
 <% end %>
 
 <hr>
@@ -25,11 +28,11 @@
     <hr>
   <% end %>
 <% else %>
-  <h3 class="text-center">メッセージはまだありません</h3>
+  <h5 class="ml-5">メッセージはまだありません</h5>
 <% end %>
 
 <%= form_with model: @message, url: users_messages_path, local: true do |f| %>
-  <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70, class: "form-control" %>
+  <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70, class: "mt-5 form-control" %>
   <%= f.hidden_field :room_id, :value => @room.id %>
   <br>
   <%= f.submit "送信", class: "btn btn-outline-success" %>
