--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -60,10 +60,8 @@
               枚方や枚方近郊にあるおすすめスポットを投稿して共有したり<br><br>
               他の人の投稿を見たりして、楽しむことの出来るサイトです。<br><br>
               このサイトを通して枚方のことを、より知っていただければと思っております。<br><br>
-              もっとHiraPediaについて詳しく知りたい方は
-              <%= link_to users_about_path do %>
-              こちら
-              <% end %>
+              もっとHiraPediaについて詳しく知りたい方は<br><br>
+              <%= link_to "こちら", users_about_path, class:"btn btn-outline-primary mx-auto" %><br><br>
               をクリック！
             </h5>
           </div>
